2006-01-13  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EventContext.cpp:

	Don't require a HTML document to activate typeaheadfind.
	Bug #326813.

2006-01-13  Christian Persch  <chpe@cvs.gnome.org>

	A embed/mozilla/EphyPromptService.cpp:
	A embed/mozilla/EphyPromptService.h:
	* embed/mozilla/Makefile.am:
	* embed/mozilla/MozRegisterComponents.cpp:
	* po/POTFILES.in:

	Implement nsIPromptService ourself.

2006-01-12  Christian Persch  <chpe@cvs.gnome.org>

	* data/ui/epiphany-toolbar.xml:
	* src/ephy-toolbars-model.c: (ephy_toolbars_model_load):

	Add Zoom In/Out buttons to default toolbar layout and toolbars
	editor repertoire. Bug #117923.

2006-01-12  Christian Persch  <chpe@cvs.gnome.org>

        * configure.ac:
	* Makefile.am:

	Enable zeroconf by default now that gnome-vfs dns-sd can use
	avahi and more distros are hopefully shipping with that.
	Still can be disabled by --disable-zeroconf.

2006-01-12  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* src/ephy-dbus.c: (ephy_dbus_connect_to_session_bus):

	Fix compiler warnings.

2006-01-11  Christian Persch  <chpe@cvs.gnome.org>

        * data/default-prefs-common.js:

	Disable <a ping>.
	
2006-01-11  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Add another contract ID check, only on gecko >= 1.8.

2006-01-11  Christian Persch  <chpe@cvs.gnome.org>

	* data/Makefile.am:

	Don't delete epiphany-fonts.schemas on make clean.

2006-01-11  Christian Persch  <chpe@cvs.gnome.org>

	* data/mime-types-permissions.xml:

	More mime types.

2006-01-10  Christian Persch  <chpe@cvs.gnome.org>

	* m4/gecko.m4:

	Fix gecko version check to use AC_EGREP_CPP instead of
	grepping the header file directly. Misc fixes.

2006-01-08  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* embed/mozilla/EphyContentPolicy.h:
	* embed/mozilla/EphyContentPolicy.cpp: (ShouldLoad):
	* embed/ephy-embed.h:
	* embed/ephy-embed.c: (ephy_embed_base_init):
