@@ -31,8 +31,8 @@
 	<toolitem name="GoHistory"/>
 	<toolitem name="GoBookmarks"/>
 	<separator/>
-	<toolitem name="ViewZoomIn"/>
 	<toolitem name="ViewZoomOut"/>
+	<toolitem name="ViewZoomIn"/>
 </toolbar>
 <toolbar name="EntryToolbar">
 	<toolitem name="Location"/>
