@@ -1,5 +1,13 @@
 2006-01-13  Christian Persch  <chpe@cvs.gnome.org>
 
+        * data/ui/epiphany-toolbar.xml:
+	* src/ephy-window.c:
+
+	Fix zoom buttons order on default toolbar. Set short-label
+	property for zoom actions.
+
+2006-01-13  Christian Persch  <chpe@cvs.gnome.org>
+
 	* embed/mozilla/EventContext.cpp:
 
 	Don't require a HTML document to activate typeaheadfind.
